force-app/main/default/objects/CalloutLog__c/CalloutLog__c.object-meta.xml
<CustomObject>
    <label>Callout Log</label>
    <nameField>
        <displayFormat>CL-{00000000}</displayFormat>
        <label>Callout Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>