force-app/main/default/objects/CalloutLog__c/fields/EYI_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>