force-app/main/default/objects/CalloutLog__c/fields/EYI_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>