force-app/main/default/objects/CalloutLog__c/fields/EYI_OTP__c.field-meta.xml
<CustomField>
    <fullName>EYI_OTP__c</fullName>
    <label>OTP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>