force-app/main/default/objects/CalloutLog__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>