force-app/main/default/objects/CalloutLog__c/fields/RequestTime__c.field-meta.xml
<CustomField>
    <fullName>RequestTime__c</fullName>
    <label>Request Time</label>
    <type>DateTime</type>
</CustomField>