force-app/main/default/objects/CalloutLog__c/fields/ResponseTime__c.field-meta.xml
<CustomField>
    <fullName>ResponseTime__c</fullName>
    <label>Response Time</label>
    <type>DateTime</type>
</CustomField>